Fix z-index of map, sidebar, and page component

--- a/src/Components/Map/MapStyles.module.css
+++ b/src/Components/Map/MapStyles.module.css
@@ -1,4 +1,4 @@
 .Map{
-  z-index:-1000;
+  z-index:1;
   flex-grow:1;
 }
