--- a/src/Components/SideBar/SideBar.module.css
+++ b/src/Components/SideBar/SideBar.module.css
@@ -5,6 +5,7 @@
   padding:19px;
   height:100%;
   overflow-y: scroll;
+  z-index:100;
 }
 
 @media only screen and (max-width: 1300px){
