--- a/src/Pages/NewMapPage/NewMapPageStyles.module.css
+++ b/src/Pages/NewMapPage/NewMapPageStyles.module.css
@@ -1,6 +1,7 @@
 .Container{
   display:flex;
   height:100vh;
+  z-index:-1000;
 }
 
 @media only screen and (max-width:720px){
